@@ -25,14 +25,15 @@
 </p>
 <hr />
 <ul>
-<li><a href="toc.html" title="Documentation">Documentation</a></li>
 <li><a href="http://sourceforge.net/project/showfiles.php?group_id=25632"
   title="Obtain the current release">Download</a></li>
 <li><a href="#features" title="Features">Features</a></li>
 <li><a href="#screenshots" title="Screenshots">Screenshots</a></li>
+<li><a href="toc.html" title="Documentation">Documentation</a></li>
 <li><a href="#search" title="Search via Google">Search</a></li>
 <li><a href="http://sourceforge.net/projects/qtstalker/" title="Development and discussion">SourceForge project</a></li>
 <li><a href="dev.html" title="Use the current version under development">Use CVS version</a></li>
+<li><a href="doc/" title="Generated source code documentation by Doxygen">Source code docs</a></li>
 </ul>
 </div>
 <!-- end rightPanel -->
