@@ -1,0 +1,14 @@
+<div id="footer">
+Search the Qtstalker source code documentation:
+<form target="_blank" action="http://www.google.com/search" method="get" id="search">
+<input value="qtstalker.sourceforge.net/doc/" name="as_sitesearch" type="hidden">
+<input type="hidden" name="ie" value="UTF-8">
+<input type="hidden" name="oe" value="UTF-8">
+<input type="text" name="as_q" size="25" maxlength="255" value="CUS">
+&nbsp;
+<input type="submit" name="btnG" value="Google Search">
+</form>
+Generated on $datetime for $projectname by&nbsp;<a href="http://www.doxygen.org/index.html"><img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> $doxygenversion
+</div>
+</body>
+</html>
